# openrouter

./: .gitmodules  CMakeLists.txt
openrouter/: CMakeLists.txt  meson.build
openrouter/auto_update/: auto_update.sh
openrouter/src/: openrouter.cpp  types.hpp
openrouter/src/OpenRouter/: OpenRouter.cpp  OpenRouter.hpp
openrouter/src/auth/: auth.cpp  auth.hpp
openrouter/src/libs/QR-Code-generator/: qrtosvg.hpp
openrouter/src/reboot/: reboot.cpp
openrouter/src/security/: cors.cpp  cors.hpp
openrouter/src/settings/dns/: dns.hpp  enabled.cpp  local_domains.cpp  servers.cpp
openrouter/src/settings/ftp/: ftp.cpp  ftp.hpp
openrouter/src/settings/ssh/: keys.cpp  port.cpp  ssh.hpp  status.cpp
openrouter/src/settings/telnet/: enabled.cpp  port.cpp  telnet.hpp
openrouter/src/settings/wifi/: channel.cpp  name.cpp  password.cpp  qr.cpp  status.cpp  wifi.hpp
openrouter/src/system/: system.hpp
openrouter/src/system/reboot/: reboot.cpp  reboot.hpp
openrouter/src/system/syslog/: syslog.cpp  syslog.hpp
openrouter/src/system/uptime/: uptime.cpp  uptime.hpp
openrouter/src/uptime/: uptime.cpp  uptime.hpp
openrouter/src/web/: index.html
openrouter/src/web/css/: button.css  form.css  header.css  info.css  settings.css
openrouter/src/web/js/: header.js  login.js  notification.js  routes.js  syslog.js  uptime.js
openrouter/src/web/js/info/: uptime.js
openrouter/src/web/js/settings/: confirm.js  dns.js  settings.js  ssh.js  telnet.js  wifi.js
rootfs/etc/: dnsmasq.conf  fstab  group  group-  hosts  inittab  iptables.conf  issue  passwd  passwd-  shadow  shadow-
rootfs/etc/dnsmasq.conf.d/: hosts  resolv.conf
rootfs/etc/hostapd/: hostapd.conf
rootfs/etc/init.d/: dnsd  dnsmasq  ftp  hostapd  hostname  http_d  init-functions  iptables  klogd  networking  nginx  openrouterinit  rcK  ssh  swap  sysctl  syslogd  telnet
rootfs/etc/network/: interfaces
rootfs/etc/rc.d/: 85openrouterinit
rootfs/etc/ssh/: ssh_host_ecdsa_key  ssh_host_ecdsa_key.pub  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub  sshd_config
rootfs/usr/conf/: nginx.conf
src/: helpers.hpp  openrouter.cpp  routes.hpp  types.hpp
src/OpenRouter/: OpenRouter.cpp
src/auth/: auth.cpp
src/libs/QR-Code-generator/: qrtosvg.cpp
src/reboot/: reboot.hpp
src/security/: cors.cpp  cors.hpp
src/settings/: settings.hpp
src/settings/dns/: dns.cpp  (+4 more)
src/syslog/: syslog.cpp  syslog.hpp
src/system/: system.hpp
src/web/: index.html
toolchain_files/: arm_uclibc  arm_uclibc_meson.txt
(+38 files in other folders)
